set height to nav to avoid image jumping down when opened

--- a/assets/styles/_navigation.scss
+++ b/assets/styles/_navigation.scss
@@ -4,6 +4,9 @@
   display: flex;
   width: 40%;
   z-index: 1099;
+  position: relative;
+  // set height to avoid image from bouncing down
+  height: 300px;
   @media screen and (min-width: $tablet) {
     width: 80%;
   }
