--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -295,6 +295,8 @@ p {
   display: flex;
   width: 40%;
   z-index: 1099;
+  position: relative;
+  height: 300px;
 }
 
 @media screen and (min-width: 768px) {
